--- a/public/style.css
+++ b/public/style.css
@@ -66,3 +66,26 @@ pre {
     color: black;
     white-space: pre-wrap;
 }
+
+@media only screen and (max-width: 500px) {
+
+    html,
+    button,
+    textarea {
+        font-size: 14px;
+    }
+
+    button,
+    textarea {
+        border: 1px solid #3b3733;
+        border-radius: 4px;
+        margin-right: 0.2em;
+    }
+
+    button {
+        padding: 0.2em 0.4em;
+        margin-top: 0.2em;
+        margin-right: 0.1em;
+    }
+
+}
